Add support for statsd over tcp

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -1,5 +1,5 @@
 [[inputs.statsd]]
-  protocol = "udp"
+  protocol = "$STATSD_PROTOCOL"
   service_address = ":8125"
   percentiles = [99, 90, 50]
 [[outputs.influxdb]]
